--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,31 +27,27 @@ incremental = false
 overflow-checks = true
 
 [features]
-# for more explicit tests, cargo test --features=backtraces
-backtraces = ["cosmwasm-std/backtraces"]
 # use library feature to disable all instantiate/execute/query exports
 library = []
 
 [package.metadata.scripts]
 optimize = """docker run --rm -v "$(pwd)":/code \
-  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
+  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
   --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
-  cosmwasm/rust-optimizer:0.12.6
+  cosmwasm/optimizer:0.16.0
 """
 
 [dependencies]
-cw721-base = { version = "0.15.0", features = ["library"] }
-cw-utils = "0.12.1"
-cosmwasm-std = "1.0.0"
-cosmwasm-storage = "1.1.1"
-cw-storage-plus = "0.15.0"
-cw2 = "0.15.0"
+cw721-base = { version = "0.18.0", features = ["library"] }
+cw-utils = "1.0.3"
+cosmwasm-std = "1.5.7"
+cw-storage-plus = "1.2.0"
+cw2 = "1.1.2"
 schemars = "0.8.10"
-serde = { version = "1.0.144", default-features = false, features = ["derive"] }
-thiserror = { version = "1.0.31" }
-cosmwasm-schema = "1.1.4"
-prost = "0.12"
+serde = { version = "1.0.207", default-features = false, features = ["derive"] }
+thiserror = { version = "1.0.63" }
+cosmwasm-schema = "2.1.3"
+prost = "0.13.1"
 
 [dev-dependencies]
-cosmwasm-schema = "1.1.1"
-cw-multi-test = "0.15.0"
+cw-multi-test = "2.1.0"
